--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -327,7 +327,7 @@
 </div>
 
 <div class="content" role="main">
-
+  <p-calendar  [locale]="en"></p-calendar>
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
