--- a/src/app/layout/inicio/inicio.component.html
+++ b/src/app/layout/inicio/inicio.component.html
@@ -1,4 +1,1 @@
-<div [@routerTransition]>
-  <h2 class="text-muted">Lista <small>de partidos</small></h2>
-  <p-menubar [model]="items"></p-menubar>
-</div>
+<app-lista-partidos></app-lista-partidos>
