con alert de primeng

--- a/src/app/layout/inicio/inicio.component.html
+++ b/src/app/layout/inicio/inicio.component.html
@@ -1,1 +1,3 @@
+<button mat-button (click)="showAlerta('e')">Error!</button>
+<button mat-button (click)="showAlerta('s')">OK!</button>
 <app-lista-partidos></app-lista-partidos>
