--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -9,7 +9,7 @@
 </mat-sidenav-container>
 -->
 
-
+<alert></alert>
 <section class="main-container" [ngClass]="{collapsed: collapedSideBar}">
     <router-outlet></router-outlet>
 </section>
