--- a/src/app/layout/inicio/components/lista-partidos/lista-partidos.component.html
+++ b/src/app/layout/inicio/components/lista-partidos/lista-partidos.component.html
@@ -1,4 +1,4 @@
 <div >
-    <h2 class="text-muted">Lista <small>de partidos</small></h2>
+    <h2 class="mat-h1">Lista de partidos</h2>
     
   </div>
