--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,17 @@
+
 <div class="login-page" [@routerTransition]>
     <div class="row justify-content-md-center">
         <div class="col-md-4">
-            <img src="assets/images/logo.png" width="150px" class="user-avatar" />
-            <h1>PUENTE DE PRAGA Nivel medio alto ;-)</h1>
+            <img src="assets/images/ptePragaColor.png" width="200px" class="user-avatar" />
+            <h1>PUENTE DE PRAGA</h1>
+            <h1>Nivel medio alto ;-)</h1>
             <form role="form">
                 <div class="form-content">
                     <div class="form-group">
                         <input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="{{ 'Email' | translate }}">
+
+                        <input matInput ng-model="name" placeholder="{{ 'Email' | translate }}">
+
                     </div>
 
                     <div class="form-group">
@@ -20,3 +25,5 @@
         </div>
     </div>
 </div>
+
+    
