--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,6 @@
 
+<mat-card>Simple card</mat-card>
+<!--
 <div class="login-page" [@routerTransition]>
     <div class="row justify-content-md-center">
         <div class="col-md-4">
@@ -26,4 +28,4 @@
     </div>
 </div>
 
-    
+    -->
