--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,3 +1,4 @@
+/*
 $topnav-background-color: #222;
 :host {
     display: block;
@@ -71,12 +72,12 @@ $topnav-background-color: #222;
         }
 
         input:-moz-placeholder {
-            /* Firefox 18- */
+           
             color: rgba(255, 255, 255, 0.6) !important;
         }
 
         input::-moz-placeholder {
-            /* Firefox 19+ */
+           
             color: rgba(255, 255, 255, 0.6) !important;
         }
 
@@ -93,3 +94,4 @@ $topnav-background-color: #222;
         border: 2px solid #fff;
     }
 }
+*/
