--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -3,3 +3,33 @@
    Every toolbar row uses a flexbox row layout. */
    flex: 1 1 auto;
  }
+
+ .barra-user{
+   color: white;
+   background-color:#BDBDBD;
+   padding-left: 10px;
+   padding-right: 5px;
+   
+ }
+
+ .header-general{
+  width: 100%; 
+ }
+
+ .header-user{
+   text-align: left;
+   font-size: 15px;
+ }
+ .header-time{
+  text-align: right;
+  font-size: 10px;
+}
+.header-button-off{
+  text-align: center;
+  color: red;
+  cursor: pointer;
+}
+.header-button-login{
+  color: rgb(13, 243, 13);
+  cursor: pointer;
+}
