iniciando listas y modificaciones

--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -7,13 +7,16 @@
 
   <!-- This fills the remaining space of the current row -->
   <span class="fill-remaining-space"></span>
-  <mat-icon  class="header-button-login" routerLink="/login" *ngIf="!currentUser">power_settings_new</mat-icon> 
+
+  
+  <mat-icon title="Conectar"  class="header-button-login" routerLink="/login" *ngIf="!currentUser">power_settings_new</mat-icon> 
+  
+
   <div fxLayout="row" fxShow="false" fxShow.gt-sm>
+      <button title="Gestion Usuarios" mat-menu-item routerLink="/users"><mat-icon color="warn" *ngIf="currentUser && currentUser.isAdmin">group</mat-icon></button>        
+  </div>
 
-      <button   color="warn" *ngIf="currentUser && currentUser.isAdmin">
-        Solo admin
-      </button>      
-
+  <div fxLayout="row" fxShow="false" fxShow.gt-sm>      
   </div>
   <button mat-button [matMenuTriggerFor]="menu" fxHide="false" fxHide.gt-sm>
    <mat-icon>menu</mat-icon>
@@ -21,8 +24,8 @@
 
 </mat-toolbar>
 <mat-menu x-position="before" #menu="matMenu">
-  <button mat-menu-item routerLink="/"><mat-icon color="warn">exit_to_app</mat-icon></button>
-  <button mat-menu-item routerLink="/login"><mat-icon color="primary">account_circle</mat-icon></button>
+  <button mat-menu-item routerLink="/users"><mat-icon color="warn" *ngIf="currentUser && currentUser.isAdmin">group</mat-icon></button>
+  
 </mat-menu>
 
 <!-- <mat-grid-list cols="2" class="barra-user" rowHeight="10px" gutterSize="5px">
