tabla user sin responsive

--- a/src/app/layout/users/users.component.html
+++ b/src/app/layout/users/users.component.html
@@ -1,4 +1,4 @@
-<p-table [columns]="cols" [value]="users" [responsive]="true" selectionMode="single" [(selection)]="selectedUser" (onRowSelect)="onRowSelect($event)" [paginator]="true" [rows]="5">
+<p-table [columns]="cols" [value]="users"  selectionMode="single" [(selection)]="selectedUser" (onRowSelect)="onRowSelect($event)" [paginator]="true" [rows]="5">
     <ng-template pTemplate="caption">
         Lista de Jugadores
     </ng-template>
