--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,6 +1,7 @@
 
 <app-header></app-header>
 <alert></alert>
+<loading></loading>
 <mat-card class="aure-container">       
         <section class="main-container" [ngClass]="{collapsed: collapedSideBar}">
             <router-outlet></router-outlet>
