--- a/src/app/layout/detalle-partido/detalle-partido.component.html
+++ b/src/app/layout/detalle-partido/detalle-partido.component.html
@@ -1,1 +1,38 @@
-<p>{{id}}</p>
+<mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Shiba Inu</mat-card-title>
+          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        </mat-card-header>        
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+            bred for hunting.
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>LIKE</button>
+          <button mat-button>SHARE</button>
+        </mat-card-actions>
+      </mat-card>
+
+<div class="ui-g" class="item_partido_normal" *ngIf="currentUser && partido">
+
+        <div class="ui-g-4">Día</div>
+        <div class="ui-g-4">Hora</div>
+        <div class="ui-g-4">Duración</div>
+
+        <div class="ui-g-4">{{partido.dia}}</div>
+        <div class="ui-g-4">{{partido.hora}}</div>
+        <div class="ui-g-4">{{partido.duracion}}</div>
+
+
+        <div class="ui-g-6">N. Pistas</div>
+        <div class="ui-g-6">Jugadores</div>
+
+        <div class="ui-g-6">{{partido.pistas}}</div>
+        <div class="ui-g-6">{{partido.jugadoresapuntados}}/{{partido.jugadorestotal}}</div>
+
+</div> 
+
